js262/test/language/statements/await-using/syntax/without-initializer-while-expression-statement.js


/*---
esid: sec-while-statement
description: >
    await using declarations without initialisers in statement positions:
    while ( Expression ) Statement
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
async function f() {
  while (false) await using x;
}
